force-app/main/default/objects/AuthChronos__mdt/AuthChronos__mdt.object-meta.xml
<CustomObject>
    <label>AuthChronos</label>
    <pluralLabel>AuthsChronos</pluralLabel>
</CustomObject>