force-app/main/default/objects/AuthChronos__mdt/fields/audience__c.field-meta.xml
<CustomField>
    <fullName>audience__c</fullName>
    <label>audience</label>
    <length>50</length>
    <type>Text</type>
</CustomField>