force-app/main/default/objects/AuthChronos__mdt/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>client_secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>