force-app/main/default/objects/AuthChronos__mdt/fields/realm__c.field-meta.xml
<CustomField>
    <fullName>realm__c</fullName>
    <label>realm</label>
    <length>50</length>
    <type>Text</type>
</CustomField>