force-app/main/default/objects/AuthChronos__mdt/fields/scope__c.field-meta.xml
<CustomField>
    <fullName>scope__c</fullName>
    <label>scope</label>
    <length>50</length>
    <type>Text</type>
</CustomField>