force-app/main/default/objects/AuthChronos__mdt/fields/url_chronos_api__c.field-meta.xml
<CustomField>
    <fullName>url_chronos_api__c</fullName>
    <label>url_chronos_api</label>
    <length>100</length>
    <type>Text</type>
</CustomField>